2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use the composed revision to identify a single action in cvs.
	
2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Remove 'Attic' also from the composed revision in cvs.
	
2008-09-03  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	'revision per files' query ordered by commit date.

2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Remove 'Attic' from the path of deleted files.
	
2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:

	Enable repository handler debug when running cvsanaly in debug
	mode.
	
2008-09-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Ignore useless 1.1.1.1 revisions in CVS and register 1.1 revisions
	as new files.

2008-09-03  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Workaround for NaN and Inf values.

2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Make sure checkout path actually exists before running metrics.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Avoids 'nan' values.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Do not trust external tools output.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:

	Fix the query in get_path_for_revision() again to make it work
	with mysql too.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:

	Fix get_path_for_revision() when a path has been reanmed or moved
	multiple times.
	
2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/utils.py:
